issue #413: add-opens for test packages